browse: music parse fix